Projects/SealWebServer/wwwroot/Content/seal.css
body {
    min-height: 400px;
}

@media screen {
    #execution_messages {
        overflow-y: auto;
        min-height: 180px;
    }

    #alert_status .alert {
        overflow-y: auto;
        max-height: 600px;
    }
}

#restrictions_button {
    display: none;
    margin-right: 5px;
}

#execute_button {
    margin-right: 10px;
    margin-left: 4px;
    width: 80px;
}

#nav_badge {
    margin-top: 4px;
}

.numeric_input {
    text-align: right;
}

.dataTables_empty {
    display: none;
}

.tr-totals {
    font-weight: bold;
}

.tr-sub-totals {
    font-weight: bold;
    font-style: italic;
}

.back-to-top {
    cursor: pointer;
    position: fixed;
    bottom: 0;
    right: 20px;
    display: none;
    z-index: 100;
}

.navigation_icon {
    font-size: 10px;
    margin-left: 2px;
}

@media print {
    .navbar {
        display: block;
        border-width: 0 !important;
    }

    .navbar-toggle, .navbar-nav, .navigation_icon, #back-to-top, .no-print, .no-print * {
        display: none !important;
    }
}

.spinning {
    animation: spin 1s infinite linear;
    -webkit-animation: spin2 1s infinite linear;
}

@keyframes spin {
    from {
        transform: scale(1) rotate(0deg);
    }

    to {
        transform: scale(1) rotate(360deg);
    }
}

@-webkit-keyframes spin2 {
    from {
        -webkit-transform: rotate(0deg);
    }

    to {
        -webkit-transform: rotate(360deg);
    }
}

.external-navigation {
    border-radius: 8px;
    padding: 4px 12px;
    margin-left: 10px;
}

    .external-navigation:hover {
        background-color: darkgrey;
    }

.disabled {
    pointer-events: none;
    opacity: 0.4;
}

.restriction_error {
    color: red;
    font-style: italic;
    font-weight: bold;
}


/* Cells values */
.cell-text {
}

.cell-identifier {
    color: #337ab7;
    font-weight: bold;
}

.cell-identifier-underline {
    color: #337ab7;
    text-decoration: underline
}

.cell-bold {
    font-weight: bold;
}

.cell-datetime {
    color: darkgreen;
    text-align: right !important;
}

.cell-datetime-closed {
    color: red;
    text-align: right !important;
}

.cell-numeric {
    color: darkblue;
    text-align: right !important;
}

.cell-numeric-positive {
    color: darkblue;
    text-align: right !important;
}

.cell-numeric-negative {
    color: red;
    text-align: right !important;
}

.text-right {
    text-align: right !important;
}

.text-center {
    text-align: center !important;
}

.text-left {
    text-align: left !important;
}

